--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.6.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.13.0",
+    "axios": "^0.27.2",
+    "mongodb": "^4.6.0",
     "next": "12.0.10",
     "next-auth": "^4.3.3",
     "react": "17.0.2",
