--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@mui/material": "^5.6.3",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.13.0",
+    "@types/bcrypt": "5.0.0",
     "axios": "^0.27.2",
+    "bcrypt": "5.0.1",
     "mongodb": "^4.6.0",
     "next": "12.0.10",
     "next-auth": "^4.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "7.31.3",
     "react-markdown": "8.0.0"
   },
   "devDependencies": {
