--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.13.0",
     "@types/bcrypt": "5.0.0",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/uuid": "8.3.4",
     "axios": "^0.27.2",
     "bcrypt": "5.0.1",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "^4.6.0",
     "next": "12.0.10",
     "next-auth": "^4.3.3",
     "react": "17.0.2",
+    "react-cookie": "4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "7.31.3",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
