--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.0.10",
     "next-auth": "^4.3.3",
     "react": "17.0.2",
+    "react-beautiful-dnd": "13.1.0",
     "react-cookie": "4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "7.31.3",
