--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/uuid": "8.3.4",
+    "aws-sdk": "2.1185.0",
     "axios": "^0.27.2",
     "bcrypt": "5.0.1",
     "jsonwebtoken": "8.5.1",
