--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "7.31.3",
     "react-markdown": "8.0.0",
+    "react-select": "5.4.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
