--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "7.31.3",
     "react-markdown": "8.0.0",
     "react-select": "5.4.0",
+    "swr": "1.3.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
