--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
-    "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.13.0",
+    "@prisma/client": "4.6.1",
     "@types/bcrypt": "5.0.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/uuid": "8.3.4",
@@ -24,9 +23,8 @@
     "axios": "^0.27.2",
     "bcrypt": "5.0.1",
     "jsonwebtoken": "8.5.1",
-    "mongodb": "^4.6.0",
+    "mongodb": "4.12.1",
     "next": "12.0.10",
-    "next-auth": "^4.3.3",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-cookie": "4.1.1",
@@ -40,7 +38,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "prisma": "^3.13.0",
+    "prisma": "4.6.1",
     "typescript": "4.5.5"
   }
 }
