--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
+    "@mui/system": "^5.11.2",
     "@prisma/client": "4.6.1",
     "@types/bcrypt": "5.0.0",
     "@types/jsonwebtoken": "8.5.8",
