--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "seed": "prisma db seed"
   },
   "keywords": [],
   "author": "",
@@ -36,10 +37,14 @@
     "swr": "1.3.0",
     "uuid": "8.3.2"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "prisma": "4.6.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.5.5"
   }
 }
