--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -24,9 +25,11 @@
     "aws-sdk": "2.1185.0",
     "axios": "^0.27.2",
     "bcrypt": "5.0.1",
+    "http-errors": "^2.0.0",
+    "jose": "^4.11.2",
     "jsonwebtoken": "8.5.1",
     "mongodb": "4.12.1",
-    "next": "12.0.10",
+    "next": "12.2.6",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-cookie": "4.1.1",
@@ -41,8 +44,12 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "12.0.0",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "prisma": "4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "4.5.5"
