--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/system": "^5.11.2",
-    "@prisma/client": "4.6.1",
+    "@mui/types": "^7.2.3",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.10.1",
     "@types/bcrypt": "5.0.0",
     "@types/jsonwebtoken": "8.5.8",
     "@types/uuid": "8.3.4",
@@ -29,16 +31,19 @@
     "jose": "^4.11.2",
     "jsonwebtoken": "8.5.1",
     "mongodb": "4.12.1",
-    "next": "12.2.6",
-    "react": "17.0.2",
+    "next": "^13.2.1",
+    "next-auth": "^4.19.2",
+    "nodemailer": "^6.9.1",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "13.1.0",
     "react-cookie": "4.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "7.31.3",
     "react-markdown": "8.0.0",
     "react-select": "5.4.0",
     "swr": "1.3.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "zod": "^3.20.2"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -50,7 +55,7 @@
     "@types/react": "17.0.38",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "prisma": "4.6.1",
+    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "4.5.5"
   }
