--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "5.0.0",
+    "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/uuid": "8.3.4",
     "aws-sdk": "2.1185.0",
